Change avatar image source URL
Updated the image source URL in the avatar container.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer{margin-top:60px;color:var(--muted);text-align:center;font-size:13px;}
   <div class="container">
     <header>
       <div class="avatar-container">
-        <img src="https://drive.google.com/uc?export=view&id=1a6xrPsUJ2zaGLOVXVqZlUabevvxWsGMx" alt="Mohanad Tarek">
+        <img src="https://drive.google.com/file/d/1a6xrPsUJ2zaGLOVXVqZlUabevvxWsGMx/view?usp=sharing" alt="Mohanad Tarek">
       </div>
       <h1>Mohanad Tarek</h1>
       <p class="lead">Backend Developer • Node.js, Express, MongoDB — Learning React, Next.js & UI/UX</p>
